[gd_scene load_steps=7 format=3 uid="uid://cvpfrlcwsk360"]

[ext_resource type="Texture2D" uid="uid://bscsp55ucxyfr" path="res://Assets/MiniWorldSprites/Characters/heÄ‘.png" id="1_gvcru"]
[ext_resource type="Script" path="res://Levels/TestLevel/Entities/hedgehog_mob.gd" id="1_m05y5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bc3il"]
size = Vector2(96.9444, 65.6667)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrngr"]
atlas = ExtResource("1_gvcru")
region = Rect2(1236, 893, 1136, 793)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbr3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrngr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j1xhh"]
radius = 288.889

[node name="HedgehogMob" type="CharacterBody2D"]
scale = Vector2(0.225, 0.225)
collision_layer = 5
collision_mask = 5
slide_on_ceiling = false
script = ExtResource("1_m05y5")

[node name="HedgehogCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.416672, 0)
shape = SubResource("RectangleShape2D_bc3il")

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HedgehogHitbox" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0.416672, 0)
shape = SubResource("RectangleShape2D_bc3il")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-8.88889, -17.7778)
scale = Vector2(0.135, 0.135)
sprite_frames = SubResource("SpriteFrames_bbr3b")

[node name="FloorCheckRight" type="RayCast2D" parent="."]
position = Vector2(48.8889, 31.1111)
target_position = Vector2(0, 5)

[node name="FloorCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-48.889, 31.111)
target_position = Vector2(0, 5)

[node name="LineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(288.889, 0)
collision_mask = 3

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="LineOfSightCheckTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="AlertArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="AlertRadius" type="CollisionShape2D" parent="AlertArea"]
shape = SubResource("CircleShape2D_j1xhh")

[connection signal="body_entered" from="HitboxArea" to="." method="_on_hedgehog_mob_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="LineOfSightCheckTimer" to="." method="_on_line_of_sight_check_timer_timeout"]
[connection signal="area_entered" from="AlertArea" to="." method="_on_body_area_entered"]
[connection signal="body_entered" from="AlertArea" to="." method="_on_aggro_radius_entered"]
[connection signal="body_exited" from="AlertArea" to="." method="_on_aggro_radius_exited"]
